Проект 1_multicalculators_JavaScript В раздел 6_11_notepadPage, в файл notepadStyle.css добавил стиль, чтобы текст автоматически помещался в заданную ширину блока.
Project 1_multicalculators_JavaScript
In section 6_11_notepadPage, I added a style to the notepadStyle.css file so that the text automatically fits into the specified block width.

--- a/6_11_notepadPage/notepadStyle.css
+++ b/6_11_notepadPage/notepadStyle.css
@@ -176,6 +176,14 @@
   justify-content: space-between;
 }
 
+.main__list-item-text {
+  /* заданная ширина блока */
+  max-width: 96%;
+  /*автоматический перенос текста, чтобы текс 
+  поместился в заданную ширину блока*/
+  word-wrap: break-word;
+}
+
 input[type=checkbox] {
   margin: 0;
   font-size: 18px;
