Проект 1_multicalculators_JavaScript Исправлены ошибки в файлах (notepadScript.js) в соответствии с инструкциями ESLint Локально изменены файлы (notepadIndex.htm, notepadStyle.css)
Project 1_multicalculators_JavaScript
Fixed file errors (notepadScript.js), according to the instructions of ESLint
Locally modified files (notepadIndex.htm, notepadStyle.css)

--- a/6_11_notepadPage/notepadStyle.css
+++ b/6_11_notepadPage/notepadStyle.css
@@ -9,7 +9,7 @@
 .main__flex-container {
   margin: 40px auto;
   max-width: 70rem;
-  background-image: url('/5_img/5_11_notepadImg/bird1.svg');
+  /* background-image: url('/5_img/5_11_notepadImg/bird1.svg'); */
   background-repeat: no-repeat;
   /* cover-масштабирует изображение с сохранением пропорций так, 
   чтобы его ширина или высота равнялась ширине или высоте блока. */
